Added ability to scan bar codes.

--- a/alexandria/app/src/main/res/layout-land/fragment_add_book.xml
+++ b/alexandria/app/src/main/res/layout-land/fragment_add_book.xml
@@ -126,6 +126,11 @@
 
 
         </LinearLayout>
-
+        <eu.livotov.zxscan.ScannerView
+            android:id="@+id/scanner"
+            android:visibility="gone"
+            android:layout_below="@+id/scan_button"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
     </RelativeLayout>
 </FrameLayout>
