--- a/football_scores/app/src/main/res/layout/detail_fragment.xml
+++ b/football_scores/app/src/main/res/layout/detail_fragment.xml
@@ -12,6 +12,7 @@
             android:gravity="center"
             android:layout_weight="1"
             android:text="@string/test_text"
+            android:contentDescription="@string/test_text"
             android:textColor="@android:color/black"
             android:textSize="@dimen/League"
             android:id="@+id/league_textview"/>
@@ -21,6 +22,7 @@
             android:gravity="center"
             android:layout_weight="1"
             android:text="@string/test_text"
+            android:contentDescription="@string/test_text"
             android:textSize="@dimen/League"
             android:textColor="@android:color/black"
             android:id="@+id/matchday_textview"/>
@@ -37,10 +39,9 @@
         android:text="@string/share_text"
         android:contentDescription="@string/share_text"
         android:id="@+id/share_button"
-        android:drawableLeft="@android:drawable/ic_menu_share"
         android:drawableStart="@android:drawable/ic_menu_share"
-        android:paddingLeft="120dp"
-        android:paddingRight="120dp"/>
+        android:paddingStart="120dp"
+        android:paddingEnd="120dp"/>
     </FrameLayout>
 
 </LinearLayout>
